First version with angular (not used yet)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
 file.reference.GitHub-incremental-rpg=.
+file.reference.incremental-rpg-app=app
 files.encoding=UTF-8
-site.root.folder=${file.reference.GitHub-incremental-rpg}
+site.root.folder=${file.reference.incremental-rpg-app}
